openshift/ocp-rocketchat-app.yml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: rocketchat-db
  namespace: rocketchat
  labels:
    app: rocketchat-db
spec:
  replicas: 1
  selector:
    app: rocketchat-db
  strategy:
    type: Recreate
    resources:
      requests:
        cpu: 400m
        memory: 1Gi
      limits:
        cpu: 500m
        memory: 2Gi
  template:
    metadata:
      labels:
        app: rocketchat-db
    spec:
      containers:
        - name: rocketchat-db
          image: docker.io/mongo:4.0
          resources:
            requests:
              cpu: 400m
              memory: 1Gi
            limits:
              cpu: '500m'
              memory: 2Gi
          command:
            - /bin/sh
            - -c
            - mongod --bind_ip 0.0.0.0 --port 27017 --smallfiles --oplogSize 128 --replSet rs0 --storageEngine=mmapv1
          volumeMounts:
            - name: rocketchat-data-vol
              mountPath: /data/db
          ports:
            - containerPort: 27017
              protocol: TCP
          readinessProbe:
            exec:
              command:
                  - /bin/sh
                  - -c
                  - "mongo --eval \"rs.initiate({_id: 'rs0', members: [{_id:0, host:'localhost:27017'}]})\""
            initialDelaySeconds: 30
            periodSeconds: 2
            timeoutSeconds: 1
            successThreshold: 3
            failureThreshold: 10
      restartPolicy: Always
      volumes:
        - name: rocketchat-data-vol
          persistentVolumeClaim:
            claimName: rocketchat-data-claim
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: rocketchat
  namespace: rocketchat
  labels:
    app: rocketchat
spec:
  replicas: 1
  selector:
    app: rocketchat
  strategy:
    resources:
      requests:
        cpu: 400m
        memory: 1Gi
      limits:
        cpu: 500m
        memory: 2Gi
  template:
    metadata:
      labels:
        app: rocketchat
    spec:
      containers:
        - name: rocketchat
          image: rocket.chat:2.4.9
          resources:
            requests:
              cpu: 400m
              memory: 1Gi
            limits:
              cpu: '500m'
              memory: 2Gi
          ports:
            - containerPort: 3000
              protocol: TCP
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: rocket-chat-db
  namespace: rocketchat
spec:
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  selector:
    app: rocketchat-db
---
apiVersion: v1
kind: Service
metadata:
  name: rocket-chat
  namespace: rocketchat
spec:
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  selector:
    app: rocketchat
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: rocket-chat
  namespace: rocketchat
spec:
  port:
    targetPort: 3000
  to:
    kind: Service
    name: rocket-chat
    weight: 100
  wildcardPolicy: None
